surfids-sensor (3.10) lenny; urgency=low

  * SURFids 3.10 stable release.
  * Added locking option for the sensor menu.
  * Added support for APT manipulation via the server.
  * Added config option to enable/disable automatic sensor updates.
  * Added OID support.
  * Fixed a few minor bugs.

 -- SURFids Development Team <ids@surfnet.nl>  Fri,  7 Jun 2011 15:25:25 +0200

surfids-sensor (3.07) lenny; urgency=low

  * Fixed out of space issue with logfile menu.
  * Fixed missing interfaces from trunk configuration menu.

 -- SURFids Development Team <ids@surfnet.nl>  Fri,  4 Jun 2010 13:33:25 +0200

surfids-sensor (3.06) lenny; urgency=low

  * Fixed bug with addr retrieval for waitInterfaceLink.

 -- SURFids Development Team <ids@surfnet.nl>  Thu,  3 Jun 2010 17:03:01 +0200

surfids-sensor (3.05) lenny; urgency=low

  * Fixed a bug with waitInterfaceLink

 -- SURFids Development Team <ids@surfnet.nl>  Thu,  3 Jun 2010 15:40:28 +0200

surfids-sensor (3.04) lenny; urgency=low

  * Improved sensor GUI.
  * Better error handling.
  * Fixed a few bugs.

 -- SURFids Development Team <ids@surfnet.nl>  Thu, 20 May 2010 19:05:38 +0200

surfids-sensor (3.03) lenny; urgency=low

  * Fixed bug #202.

 -- SURFids Development Team <ids@surfnet.nl>  Mon,  7 Dec 2009 13:29:08 +0100

surfids-sensor (3.02) lenny; urgency=low

  * Fixed bug #172.
  * Fixed bug #173.

 -- SURFids Development Team <ids@surfnet.nl>  Wed, 26 Aug 2009 12:57:24 +0200

surfids-sensor (3.01) lenny; urgency=low

  * Fixed bug #170.
  * Fixed bug #171.

 -- SURFids Development Team <ids@surfnet.nl>  Mon, 24 Aug 2009 16:53:43 +0200

surfids-sensor (3.0) lenny; urgency=low

    * Complete rewrite of the sensor in Python.
    * Sensor support for regular Debian-like systems.
    * USB sensor based on Debian Live.
    * No more Knoppix remastering.
    * VLAN sensors now only require 1 IP address per VLAN (instead of 2) resulting in a total amount of IP addresses of VLANs + 1.
