@@ -1,3 +1,4 @@
 PATH=/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin
 */5 * * * * root /usr/sbin/sensor-update
+*/10 * * * * root /usr/sbin/sensor-check
 
