@@ -5,6 +5,7 @@ surfids-sensor (3.10) lenny; urgency=low
   * Added support for APT manipulation via the server.
   * Added config option to enable/disable automatic sensor updates.
   * Added OID support.
+  * Added watch script for OpenVPN tunnel.
   * Fixed a few minor bugs.
 
  -- SURFids Development Team <ids@surfnet.nl>  Fri,  7 Jun 2011 15:25:25 +0200
